Fix for overflow of Swiper

--- a/source/_assets/sass/_index.scss
+++ b/source/_assets/sass/_index.scss
@@ -1,5 +1,6 @@
 .swiper-container {
   height: 450px;
+  overflow: hidden;
 
   .swiper-pagination.swiper-pagination-bullets {
     .swiper-pagination-bullet {
